# OBT_Dashboard

./: README.md
OBT_Dashboard_backend/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
OBT_Dashboard_frontend/: Dockerfile
OBT_Dashboard_frontend/src/: App.js  App.tsx  Login.tsx  index.tsx
OBT_Dashboard_frontend/src/components/: CustomNavBar.tsx  Dashboard.tsx
