[tool.poetry]
name = "OBT_Dashboard_backend"
version = "0.1.0"
description = ""
authors = ["Mathieu Ract <mathieu.ract@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.73.0"
requests = "^2.27.1"
pytest = "^6.2.5"
mypy = "^0.931"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"